--- a/lib/api/Cargo.toml
+++ b/lib/api/Cargo.toml
@@ -16,6 +16,7 @@ uuid = { version = "1.0", features = ["v4", "serde"] }
 tower = "0.4.12"
 tokio = "1.18.2"
 rand = "0.8.5"
+itertools = "0.10"
 
 segment = {path = "../segment"}
 
